@@ -3,15 +3,37 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 plugins {
     id("buildlogic.java-common-conventions")
 
-    `java-library`
+    application
 
     id("org.openjfx.javafxplugin") version("0.1.0")
+
+    id("com.gradleup.shadow") version "9.0.0-beta13"
+}
+
+application{
+    mainClass.set("org.jabref.http.server.cli.ServerCli")
+    mainModule.set("org.jabref.jabsrv.cli")
+
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=com.sun.jna"
+    )
 }
 
 dependencies {
-    api(project(":jablib"))
+    implementation(project(":jablib"))
+    implementation(project(":jabsrv"))
 
     implementation("org.slf4j:slf4j-api:2.0.17")
+    implementation("org.tinylog:slf4j-tinylog:2.7.0")
+    implementation("org.tinylog:tinylog-impl:2.7.0")
+    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
+    implementation("org.slf4j:jul-to-slf4j:2.0.17")
+    // route all requests to log4j to SLF4J
+    implementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
+    implementation("info.picocli:picocli:4.7.7")
+    annotationProcessor("info.picocli:picocli-codegen:4.7.7")
+
+    // region copied from jabsrv
 
     // API
     implementation("jakarta.ws.rs:jakarta.ws.rs-api:4.0.0")
@@ -57,18 +79,7 @@ dependencies {
         exclude(group = "org.antlr")
     }
 
-    testImplementation("org.mockito:mockito-core:5.17.0") {
-        exclude(group = "net.bytebuddy", module = "byte-buddy")
-    }
-    testImplementation("net.bytebuddy:byte-buddy:1.17.5")
-
-    testImplementation("org.tinylog:slf4j-tinylog:2.7.0")
-    testImplementation("org.tinylog:tinylog-impl:2.7.0")
-    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
-    testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
-    // route all requests to log4j to SLF4J
-    testImplementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
-
+    // endregion
 }
 
 javafx {
@@ -84,4 +95,26 @@ tasks.test {
         exceptionFormat = TestExceptionFormat.FULL
     }
     maxParallelForks = 1
+}
+
+tasks.named<JavaExec>("run") {
+    doFirst {
+        application.applicationDefaultJvmArgs =
+            listOf(
+                "--enable-native-access=com.sun.jna"
+            )
+    }
+}
+
+tasks.shadowJar {
+    setProperty("zip64", true)
+}
+
+tasks.named<JavaExec>("run") {
+    doFirst {
+        application.applicationDefaultJvmArgs =
+            listOf(
+                "--enable-native-access=com.sun.jna"
+            )
+    }
 }
